--- a/html e css/nextpage.html
+++ b/html e css/nextpage.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="arquivo.css"/>
+    <a class="backpage" href="example.html">Back</a>
 </head>
 <body>
 
